<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <RelativeLayout android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@id/rl_announce_info"
      android:layout_margin="@dimen/main_announce_header_text_mode_padding_left">
    <TextView android:id="@id/tv_listen_mode"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/listening_mode"/>
    <TextView android:id="@+id/tv_listen_hobby"
        android:layout_below="@id/tv_listen_mode"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/listening_hobby"/>
    <TextView android:id="@id/tv_listen_range"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_listen_hobby"
        android:text="@string/listening_range"/>
    <TextView android:id="@+id/tv_car_mode"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_listen_range"
        android:text="@string/car_mode"/>
  </RelativeLayout>

  <android.support.v7.widget.RecyclerView
      android:id="@id/rv_current_orders"
      android:fadingEdge="none"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="83.0dip"
      android:listSelector="@drawable/list_selector"
      android:scrollingCache="false"
      android:divider="@color/list_divider"
      android:dividerHeight="0.0px"
      android:headerDividersEnabled="false"
      android:layout_below="@id/rl_announce_info"
      android:footerDividersEnabled="false"/>

  <RelativeLayout
      android:id="@id/loading_frame"
      android:visibility="gone"
      android:clickable="true"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent">

    <LinearLayout
        android:background="@drawable/driver_fragment_loading_bg"
        android:padding="20.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

      <ProgressBar
          android:layout_width="40.0dip"
          android:layout_height="40.0dip"/>
    </LinearLayout>
  </RelativeLayout>
</RelativeLayout>