<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:background="@drawable/order_grabbed_bg"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/img_height_main_order_fragment_grabbed_by_others_vs_title_top_img"/>

    <TextView
        android:textSize="@dimen/txt_size_main_order_fragment_grabbed_by_others_title"
        android:textColor="@color/txt_color_main_order_fragment_grabbed_by_others_red"
        android:layout_gravity="center_horizontal"
        android:id="@id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/order_strive_result_detail_title_margin_top"
        android:text="@string/order_grabbed_by_others_title"/>

    <TextView
        android:textSize="@dimen/txt_size_main_order_fragment_grabbed_by_others_title_explain"
        android:textColor="@color/txt_color_main_order_fragment_grabbed_by_others_red"
        android:layout_gravity="center_horizontal"
        android:id="@id/tv_title_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-3.0dip"
        android:text="@string/order_grabbed_by_others_title_explain"/>
  </LinearLayout>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/order_grab_result_detail_avatar_margin_top">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10.0dip"
        android:layout_weight="3.0">

      <com.uniware.driver.gui.ui.CircleImageView
          xmlns:app="http://schemas.android.com/apk/res-auto"
          android:layout_gravity="center_horizontal"
          android:id="@id/civ_my_photo"
          android:layout_width="@dimen/img_size_top_main_order_fragment_grabbed_by_others_vs_photo_circle_d"
          android:layout_height="@dimen/img_size_top_main_order_fragment_grabbed_by_others_vs_photo_circle_d"
          android:src="@drawable/main_driver_photo"
          app:civ_border_width="3.0dip"
          app:civ_border_color="#ffff0000"/>

      <TextView
          android:textSize="@dimen/f_28"
          android:textColor="@color/txt_color_main_order_fragment_grabbed_by_others_gray"
          android:layout_gravity="center_horizontal"
          android:id="@id/txt_order_grabbed_by_others_vs_my_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_top_main_order_fragment_grabbed_by_others_detail_vs_info_name"
          android:text="@string/order_grabbed_by_others_vs_my_name"/>

      <TextView
          android:textSize="@dimen/f_34"
          android:textColor="@color/txt_color_main_order_fragment_grabbed_by_others_gray"
          android:layout_gravity="center_horizontal"
          android:id="@id/tv_my_distance"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_top_main_order_fragment_grabbed_by_others_detail_vs_info_distance"
          android:text="@string/order_grabbed_by_others_vs_my_distance"/>

      <TextView
          android:textSize="@dimen/f_34"
          android:textColor="@color/txt_color_main_order_fragment_grabbed_by_others_gray"
          android:layout_gravity="center_horizontal"
          android:id="@id/tv_my_score"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_top_main_order_fragment_grabbed_by_others_detail_vs_people_score"
          android:text="@string/order_grabbed_by_others_vs_my_score"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4.0">

      <TextView
          android:textSize="@dimen/f_28"
          android:textColor="@color/txt_color_main_order_fragment_grabbed_by_others_gray"
          android:layout_gravity="center_horizontal"
          android:visibility="visible"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/order_grab_result_detail_avatar_compare_margin_top"
          android:text="@string/order_grabbed_by_others_vs_name"/>

      <TextView
          android:textSize="@dimen/f_28"
          android:textColor="@color/txt_color_main_order_fragment_grabbed_by_others_gray"
          android:layout_gravity="center_horizontal"
          android:id="@id/tv_distance"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/order_grab_result_detail_distance_compare_margin_top"
          android:text="@string/order_grabbed_by_others_vs_distance"/>

      <TextView
          android:textSize="@dimen/f_28"
          android:textColor="@color/txt_color_main_order_fragment_grabbed_by_others_gray"
          android:layout_gravity="center_horizontal"
          android:id="@id/tv_score"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/order_grab_result_detail_buff_compare_margin_top"
          android:text="@string/order_grabbed_by_others_vs_score"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3.0">

      <com.uniware.driver.gui.ui.CircleImageView
          xmlns:app="http://schemas.android.com/apk/res-auto"
          android:layout_gravity="center_horizontal"
          android:id="@id/civ_his_photo"
          android:layout_width="@dimen/img_size_top_main_order_fragment_grabbed_by_others_vs_photo_circle_d"
          android:layout_height="@dimen/img_size_top_main_order_fragment_grabbed_by_others_vs_photo_circle_d"
          android:src="@drawable/main_driver_photo"
          app:civ_border_width="3.0dip"
          app:civ_border_color="#ffff0000"/>

      <TextView
          android:textSize="@dimen/f_28"
          android:textColor="@color/txt_color_main_order_fragment_grabbed_by_others_gray"
          android:layout_gravity="center_horizontal"
          android:id="@id/tv_his_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_top_main_order_fragment_grabbed_by_others_detail_vs_info_name"
          android:text="@string/order_grabbed_by_others_vs_his_name"/>

      <TextView
          android:textSize="@dimen/f_34"
          android:textColor="@color/txt_color_main_order_fragment_grabbed_by_others_gray"
          android:layout_gravity="center_horizontal"
          android:id="@id/tv_his_distance"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_top_main_order_fragment_grabbed_by_others_detail_vs_info_distance"
          android:text="@string/order_grabbed_by_others_vs_his_distance"/>

      <TextView
          android:textSize="@dimen/f_34"
          android:textColor="@color/txt_color_main_order_fragment_grabbed_by_others_red"
          android:layout_gravity="center_horizontal"
          android:id="@id/tv_his_score"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_top_main_order_fragment_grabbed_by_others_detail_vs_people_score"
          android:text="@string/order_grabbed_by_others_vs_his_score"/>
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/order_grab_result_detail_line_compare_margin_top"
      android:layout_marginBottom="2.0dip">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:id="@id/iv_total_div_bg"
        android:background="@drawable/order_grabbed_total_div_bg"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"/>
  </LinearLayout>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10.0dip"
        android:layout_weight="3.0">

      <TextView
          android:textSize="@dimen/f_74"
          android:textColor="@color/txt_color_main_order_fragment_grabbed_by_others_gray"
          android:layout_gravity="center_horizontal"
          android:id="@id/tv_my_total_result"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_top_main_order_fragment_grabbed_by_others_vs_people_result_detail"
          android:text="@string/order_grabbed_by_others_vs_my_total_result"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4.0">

      <TextView
          android:textSize="@dimen/f_28"
          android:textColor="@color/txt_color_main_order_fragment_grabbed_by_others_gray"
          android:layout_gravity="center_horizontal"
          android:id="@id/tv_total_result"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/order_grab_result_detail_total_compare_margin_top"
          android:text="@string/order_grabbed_by_others_vs_total_result"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginRight="10.0dip"
        android:layout_weight="3.0">

      <TextView
          android:textSize="@dimen/f_74"
          android:textColor="@color/txt_color_main_order_fragment_grabbed_by_others_red"
          android:layout_gravity="center_horizontal"
          android:id="@id/tv_his_total_result"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_top_main_order_fragment_grabbed_by_others_vs_people_result_detail"
          android:text="@string/order_grabbed_by_others_vs_his_total_result"/>

      <TextView
          android:layout_gravity="right"
          android:id="@id/tv_detailed_tip_off"
          android:background="@drawable/tip_off_btn_selector"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/order_grab_result_detail_tip_off_margin_top"
          android:layout_marginRight="10.0dip"/>
    </LinearLayout>
  </LinearLayout>
</LinearLayout>